# big-medicine

./: .dockerignore  .gitignore  README.md  compose.yml  config.toml  flake.nix  pyproject.toml
.github/: scylla.patch
.github/workflows/: workflow.yml
big_medicine/: __main__.py  cli.py  processing.py  tests.py
big_medicine/core/: client.py  model.py  server.py
big_medicine/core/client/: core.py  model.py  request.py
big_medicine/core/server/: core.py  message.py  model.py
big_medicine/utils/: db.py  logging.py  processing.py
docker/client/: Dockerfile
docker/init/: Dockerfile
docker/server/: Dockerfile
