[project]
name = "big-medicine"
version = "0.0.1"
dependencies = [
    "aiohttp>=3.11.14",
    "cassandra-driver>=3.29.2",
    "coloredlogs>=15.0.1",
    "fastapi>=0.115.12",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pydantic-typer>=0.0.13",
    "toml>=0.10.2",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
]
# dependencies = []
requires-python = ">=3.11,<=3.12"

[project.scripts]
bigmed = "big_medicine.__main__:app"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "big_medicine*",
]


[tool.ruff]
preview = true
line-length = 79

[tool.ruff.lint]
select = [
    "ANN001",   # Missing type annotation for function argument
    "ANN2",     # Missing return type annotation
    "DOC",      # Pydoclint
    "D",        # Pydocstyle
    "E",        # Pycodestyle
    "F",        # Pyflakes
    "I",        # Isort
    "Q",        # Quotes
]

ignore = [
    "D1",       # Missing docstrings
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
style = "google"
allow-init-docstring = true
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
