[project]
name = "big-medicine"
version = "0.0.1"
dependencies = [
    "aiohttp[speedups]>=3.11.16",
    "coloredlogs>=15.0.1",
    "pydantic-typer>=0.0.13",
    "toml>=0.10.2",
    "typer>=0.15.2",
]
# dependencies = []
requires-python = ">=3.10,<3.13"

[project.optional-dependencies]
cassandra = [
    "cassandra-driver>=3.29.2",
]
processing = [
    "big_medicine[cassandra]",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
]
server = [
    "big_medicine[cassandra]",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[project.scripts]
bigmed = "big_medicine.__main__:app"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "big_medicine*",
]


[tool.ruff]
preview = true
line-length = 79

[tool.ruff.lint]
select = [
    "ANN001",   # Missing type annotation for function argument
    "ANN2",     # Missing return type annotation
    "DOC",      # Pydoclint
    "D",        # Pydocstyle
    "E",        # Pycodestyle
    "F",        # Pyflakes
    "I",        # Isort
    "Q",        # Quotes
]

ignore = [
    "D1",       # Missing docstrings
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
style = "google"
allow-init-docstring = true
arg-type-hints-in-signature = true
arg-type-hints-in-docstring = false
